레이아웃 일부 수정

--- a/content/blog/docker-intro.mdx
+++ b/content/blog/docker-intro.mdx
@@ -1,8 +1,9 @@
 ---
 title: "Docker란 무엇일까"
-description: "컨테이너 기반 가상화 기술 Docker의 개념, 주요 요소, 장점들 정리"
+description: "MLOps를 위한 Docker 개념 정리"
 date: 2025-06-28
 published: true
+tags: ["MLOps"]
 ---
 
 # Docker란 무엇일까
