--- a/content/blog/docker-intro.mdx
+++ b/content/blog/docker-intro.mdx
@@ -3,7 +3,7 @@ title: "Docker란 무엇일까"
 description: "MLOps를 위한 Docker 개념 정리"
 date: 2025-06-28
 published: true
-tags: ["MLOps"]
+tags: ["Docker", "MLOps", "DevOps", "Cloud", "CI/CD"]
 ---
 
 # Docker란 무엇일까
