--- a/content/blog/docker-intro.mdx
+++ b/content/blog/docker-intro.mdx
@@ -6,6 +6,8 @@ published: true
 tags: ["Docker", "MLOps", "DevOps", "Cloud", "CI/CD"]
 ---
 
+> 본 포스팅은 Inflearn '실리콘밸리 엔지니어와 함께하는 Docker' 강의 내용을 정리한 글입니다.
+
 # Docker란 무엇일까
 
 애플리케이션을 신속하게 구축, 테스트 및 배포할 수 있는 소프트웨어 플랫폼이다.  
