--- a/content/blog/3D-Reconstruction.mdx
+++ b/content/blog/3D-Reconstruction.mdx
@@ -6,6 +6,9 @@ published: true
 tags: ["Co-Week Academy", "Computer Vision", "AI", "3D Graphics"]
 ---
 
+> 본 포스팅은 2025 Co-Week Academy 참여 후 강의 내용을 정리한 글입니다.
+___
+
 # 현실을 3차원으로: AI 재구성 기술
 
 현실 세계는 3차원이지만, 우리가 사용하는 대부분의 이미지 센서는 2차원 정보를 담는다.  
