--- a/content/blog/constrained-Optimization-LagrangeMultipliers.mdx
+++ b/content/blog/constrained-Optimization-LagrangeMultipliers.mdx
@@ -1,6 +1,6 @@
 ---
 title: "[LG Aimers] Convex Optimization"
-descriptiademon: "Constrained Optimization 정리"
+description: "Constrained Optimization 정리"
 date: 2025-07-12
 published: true
 tags: ["LG Aimers", "Mathematics", "Machine Learning"]
@@ -37,6 +37,8 @@ $$
 * **Feasible set** (제약 조건을 만족하는 해의 집합): 공집합이 아니라고 가정함.
 * **최적값**: $p^*$, **최적 해**: $x^*$
 
+> 예를 들어 ‘다이어트하면서 피자를 최대한 먹고 싶은 사람’을 생각해보면 된다. 피자 섭취량을 최대화하고 싶은데, 하루 칼로리는 1500kcal를 넘으면 안 되고 단백질은 60g 이상이어야 한다. 이게 바로 제약 조건이고, 피자 양을 최대화하는 게 목적 함수다. 이걸 수학적으로 표현한 게 바로 위 문제다.
+
 ---
 
 ### 2. 라그랑주 승수법 (Lagrange Multipliers)
@@ -52,6 +54,8 @@ $$
 * $\lambda_i \geq 0$: 부등식 제약 조건의 **라그랑주 승수 (Lagrange multipliers)**
 * $\nu_j$: 등식 제약 조건의 승수
 
+> 제약 조건을 직접 다루기 어렵기 때문에, 목적 함수 안에 제약 조건을 ‘벌점’처럼 넣어서 하나의 함수로 만들어버리는 방식이다. 예를 들어 피자 먹는 문제에서 ‘칼로리를 넘겼다’면 그만큼 패널티를 주는 식이다. 이 패널티의 가중치가 바로 $\lambda$, $\nu$이고, 이들을 통해 제약 조건을 고려한 새로운 목적 함수를 만든다.
+
 ---
 
 ### 3. 라그랑주 **쌍대 함수 (Dual Function)**
@@ -64,6 +68,8 @@ $$
 
 * $D(\lambda, \nu) \leq f(x)$가 항상 성립 (모든 feasible $x$에 대해)
 * $D(\lambda, \nu) \leq p^*$: **모든 제약조건을 만족하는 최적값**보다 작거나 같음 → 이를 **약한 쌍대성 (Weak Duality)** 라고 함
+
+> 쉽게 말하면, 실제 최적값은 모르지만 $D(\lambda, \nu)$라는 함수를 통해 “여기보다 작을 수는 없다”는 하한선을 그어주는 느낌이다. 피자 문제라면, 어떤 조합으로도 40조각 이상은 못 먹는다는 걸 수학적으로 보장하는 거다.
 
 ---
 
@@ -91,6 +97,8 @@ $$
 $$
 d^* = p^*
 $$
+
+> dual problem은 원래 문제를 거울에 비춘 문제다. 놀라운 점은 어떤 조건이 만족되면 원래 문제(primal)와 같은 해를 가지는 쌍둥이 문제라는 것. 즉, 피자 문제를 직접 풀기 어렵다면, 거울 속 반대편 문제를 풀면 똑같은 해를 얻게 되는 셈이다.
 
 ---
 
@@ -123,6 +131,8 @@ $$
 $$
 \lambda_i^* g_i(x^*) = 0
 $$
+
+> 각각을 비유하면 이렇다. stationarity는 목적 함수의 기울기와 제약 조건이 힘의 균형을 이룬다는 뜻이다. primal/dual feasibility는 조건을 제대로 지키고 있는지 확인하는 것이고, complementary slackness는 ‘비활성화된 조건은 영향을 안 주고 있다’는 걸 말해준다. 예를 들어 피자 문제에서, 단백질 조건이 충분히 만족되고 있다면 그 제약 조건은 더 이상 목적 함수에 영향을 미치지 않는다.
 
 ---
 
