--- a/content/blog/causality.mdx
+++ b/content/blog/causality.mdx
@@ -65,7 +65,7 @@ tags: ["LG Aimers", "Mathematics"]
 * 핵심 가정:
 
   * **SUTVA**: 서로 간섭 없음, 하나의 처리만 존재
-  * **비혼란(Unconfoundedness)**: 주어진 조건 Z 하에 X ⊥ (Y(1), Y(0))
+  * **비혼란성(Unconfoundedness)**: 주어진 조건 Z 하에 X ⊥ (Y(1), Y(0))
 
 > 예시:
 >
@@ -115,10 +115,10 @@ tags: ["LG Aimers", "Mathematics"]
 
 ---
 
-### 2. **랜덤화와 비혼란(Unconfoundedness)**
+### 2. **랜덤화와 비혼란성(Unconfoundedness)**
 
 * **랜덤화**가 이루어진 실험에서는, 처리 X가 **무작위로 배정**되어, **관측된 변수와 관측되지 않은 변수들에 대해 모두 균형**을 이룸
-* 비혼란(Unconfoundedness)은 관측된 변수 Z에 대해 X가 **무작위로 배정된 것**처럼 취급되는 상태를 의미. 즉, Z에 조건을 걸면, X와 Y 간의 상관관계가 원인-결과 관계를 정확히 반영하게 된다.
+* 비혼란성(Unconfoundedness)은 관측된 변수 Z에 대해 X가 **무작위로 배정된 것**처럼 취급되는 상태를 의미. 즉, Z에 조건을 걸면, X와 Y 간의 상관관계가 원인-결과 관계를 정확히 반영하게 된다.
 
 > 예시: 랜덤화된 실험에서 어떤 환자에게 약을 주고, 다른 환자에게는 위약을 준다. 이때, 약을 받는 그룹과 위약을 받는 그룹 사이에 기존 조건(예: 나이, 성별 등) 차이가 없으면, 그 차이가 치료 효과에 미친 영향을 정확하게 알 수 있다.
 
@@ -142,9 +142,9 @@ tags: ["LG Aimers", "Mathematics"]
 
 ### 4. **인과 추론에서의 주요 가정과 방법**
 
-#### **비혼란과 조건부 독립성 (Conditional Independence)**
+#### **비혼란성과 조건부 독립성 (Conditional Independence)**
 
-* **비혼란(Unconfoundedness)**: 처리 변수 X는 Z에 조건을 두었을 때, 결과 변수 Y(1)과 Y(0)에 독립적이어야. 즉, 주어진 Z에 대해 X가 Y에 미치는 영향을 제대로 추정할 수 있어야 한다.
+* **비혼란성(Unconfoundedness)**: 처리 변수 X는 Z에 조건을 두었을 때, 결과 변수 Y(1)과 Y(0)에 독립적이어야. 즉, 주어진 Z에 대해 X가 Y에 미치는 영향을 제대로 추정할 수 있어야 한다.
 
 * **조건부 독립성 (Conditional Independence)**: Z가 주어졌을 때, X와 Y는 서로 독립적이어야. 이는 특정 조건(Z)을 설정한 후, X와 Y 간의 관계가 인과적 해석을 가능하게 만듦.
 
